--- a/web/src/index.html
+++ b/web/src/index.html
@@ -14,7 +14,7 @@
           <a
             href="https://github.com/singuerinc/spanish-car-plate"
             target="_blank"
-            class="pa2 near-white link dim"
+            class="pa2 near-black link dim"
             >Github</a
           >
         </li>
@@ -22,7 +22,7 @@
     </nav>
     <section class="flex flex-wrap relative justify-center items-center">
       <h1 class="f1 f-headline-l lh-solid mt5 mb0">
-        BT<span class="near-white">DNI</span>T3R
+        scp
       </h1>
       <h2 class="w-100 ph2 tc fw3 f4 f3-l lh-title cyan">
         The fastest Spanish Car Plate validation out there
