docs: update readme

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -25,7 +25,7 @@
         scp
       </h1>
       <h2 class="w-100 ph2 tc fw3 f4 f3-l lh-title cyan">
-        The fastest Spanish Car Plate validation out there
+        Spanish Car Plate validation
       </h2>
     </section>
     <section class="flex flex-wrap justify-center included mt3">
