feat(web): demo page

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Spanish Car Plate</title>
+    <title>Spanish Car Plate / validator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
 
@@ -20,16 +20,18 @@
         </li>
       </ul>
     </nav>
-    <section class="flex flex-wrap relative justify-center items-center">
-      <h1 class="f1 f-headline-l lh-solid mt5 mb0">
-        scp
+    <section
+      class="flex flex-wrap flex-column relative justify-center items-center"
+    >
+      <h1 class="f-headline ma0">
+        Car Plate
       </h1>
-      <h2 class="w-100 ph2 tc fw3 f4 f3-l lh-title cyan">
-        Spanish Car Plate validation
+      <h2 class="f1 ma0">
+        Spanish validator
       </h2>
     </section>
     <section class="flex flex-wrap justify-center included mt3">
-      <h3 class="w-100 tc">Try it</h3>
+      <h3 class="w-100 tc">Try it!</h3>
       <div class="w-100 flex flex-wrap justify-center">
         <div id="app"></div>
       </div>
